debug layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,3 @@ body{
   background-size: cover;
 }
 
-*{
-  overflow-x: hidden;
-}
